--- a/scss/_new_Arrivals.scss
+++ b/scss/_new_Arrivals.scss
@@ -12,7 +12,7 @@
         text-align: center;
         margin-bottom: 100px;
     }
-    .sectionCard{
+    .sectionCardContainer{
         margin-bottom: 70px;
         .cardProducts{
             width: 250%;
