--- a/views/sign_In_&_Create_Account.html
+++ b/views/sign_In_&_Create_Account.html
@@ -161,7 +161,7 @@
             </article>
         </section>
 
-        <!-- My Cart -->
+        <!-- ShoppingCart -->
 
         <input id="cart" type="checkbox">
         <section class="sectionShop">
@@ -179,74 +179,31 @@
                                 <h3 class="titleCartlist">Quantity</h3>
                                 <h3 class="titleCartlist">Total</h3>
                             </article>
-                            <article class="cartlist">
-                                    <img class="itemProduct" src="../img/pic24.webp" alt="Product pic">
-                                    <div class="description">
-                                        <p class="price">$499</p>
-                                        <div class="icons">
-                                            <img src="../img/trash_Icon.svg" alt="Trash icon">
-                                            <img src="../img/edit_Icon.svg" alt="Edit icon">
+                            <article class="containerArticles">
+                                <!-- <article class="cartlist">
+                                        <img class="itemProduct" src="../img/pic24.webp" alt="Product pic">
+                                        <div class="description">
+                                            <p class="price">$499</p>
+                                            <div class="icons">
+                                                <img src="../img/trash_Icon.svg" alt="Trash icon">
+                                                <img src="../img/edit_Icon.svg" alt="Edit icon">
+                                            </div>
                                         </div>
-                                    </div>
-                                    <div class="itemNumber">
-                                        <label for="quantity"></label>
-                                        <input type="number" id="quantity" name="quantity" min="1" max="5" value="0" >
-                                    </div>
-                                    <p class="total">$499</p>
-                            </article>
-                            <article class="cartlist">
-                                    <img class="itemProduct" src="../img/pic25.webp" alt="Product pic">
-                                    <div class="description">
-                                        <p class="price">$499</p>
-                                        <div class="icons">
-                                            <img src="../img/trash_Icon.svg" alt="Trash icon">
-                                            <img src="../img/edit_Icon.svg" alt="Edit icon">
+                                        <div class="itemNumber">
+                                            <label for="quantity"></label>
+                                            <input type="number" id="quantity" name="quantity" min="1" max="5" value="0" >
                                         </div>
-                                    </div>
-                                    <div class="itemNumber">
-                                        <label for="quantity"></label>
-                                        <input type="number" id="quantity" name="quantity" min="1" max="5" value="0">
-                                    </div>
-                                    <p class="total">$499</p>
+                                        <p class="total">$499</p>
+                                </article> -->
                             </article>
-                            <article class="cartlist">
-                                    <img class="itemProduct" src="../img/pic29.webp" alt="Product pic">
-                                    <div class="description">
-                                        <p class="price">$499</p>
-                                        <div class="icons">
-                                            <img src="../img/trash_Icon.svg" alt="Trash icon">
-                                            <img src="../img/edit_Icon.svg" alt="Edit icon">
-                                        </div>
-                                    </div>
-                                    <div class="itemNumber">
-                                        <label for="quantity"></label>
-                                        <input type="number" id="quantity" name="quantity" min="1" max="5" value="0">
-                                    </div>
-                                    <p class="total">$499</p>
-                            </article>
-                            <article class="cartlist">
-                                <img class="itemProduct" src="../img/pic22.webp" alt="Product pic">
-                                <div class="description">
-                                    <p class="price">$499</p>
-                                    <div class="icons">
-                                        <img src="../img/trash_Icon.svg" alt="Trash icon">
-                                        <img src="../img/edit_Icon.svg" alt="Edit icon">
-                                    </div>
-                                </div>
-                                <div class="itemNumber">
-                                    <label for="quantity"></label>
-                                    <input type="number" id="quantity" name="quantity" min="1" max="5" value="0">
-                                </div>
-                                <p class="total">$499</p>
-                        </article>
                         </div>
                     </div>
                     <div class="outcomeCard">
-                        <article class="outcome">
+                        <!-- <article class="outcome">
                             <p class="shipping">Shipping<span>$00</span></p>
                             <p class="discount">Discount 25%<span>$374</span></p>
                             <p class="total">Total<span>$1122</span></p>
-                        </article>
+                        </article> -->
                         <button class="btnCheckout">Secure checkout</button>
                     </div>
                 </nav>
@@ -260,44 +217,34 @@
             <label for="wishlistSide" class="wishHeadLine">
                 <img class="closeCross" src="../img/close_Cross.svg" alt="Close cross icon">
             </label>
-                <nav class="menuWishlist">
-                    <div class="choiceWishlist">
-                        <h3 class="wishlistWord">WishList</h3>
-                        <div class="wish">
-                            <article class="category">
-                                <h3 class="titleWishlist">Item</h3>
-                                <h3 class="titleWishlist">Pricing</h3>
-                                <h3 class="titleWishlist">Wish</h3>
-                            </article>
-                            <article class="wishlist">
+            <nav class="menuWishlist">
+                <div class="choiceWishlist">
+                    <h3 class="wishlistWord">WishList</h3>
+                    <div class="wish">
+                        <article class="category">
+                            <h3 class="titleWishlist">Item</h3>
+                            <h3 class="titleWishlist">Pricing</h3>
+                            <h3 class="titleWishlist">Wish</h3>
+                        </article>
+                        <article class="containerWishlist">
+                            <!-- <article class="wishlist">
                                 <div class="blockProduct">
-                                    <img class="itemProduct" src="../img/pic24.webp" alt="Product pic">
+                                    <img class="itemProduct" src="img/pic24.webp" alt="Product pic">
                                     <div class="description">
                                         <p class="wishPrice">$499</p>
                                         <div class="icons">
-                                            <img src="../img/trash_Icon.svg" alt="Trash icon">
-                                            <img src="../img/edit_Icon.svg" alt="Edit icon">
+                                            <img src="img/trash_Icon.svg" alt="Trash icon">
+                                            <img src="img/edit_Icon.svg" alt="Edit icon">
                                         </div>
                                     </div>
-                                    <img class="itemWishlist" src="../img/wishlist_Icon.svg" alt="Wishlist icon">
+                                    <img class="itemWishlist" src="img/wishlist_Icon.svg" alt="Wishlist icon">
                                 </div>
-                            </article>
-                            <article class="wishlist">
-                                <div class="blockProduct">
-                                    <img class="itemProduct" src="../img/pic25.webp" alt="Product pic">
-                                    <div class="description">
-                                        <p class="wishPrice">$499</p>
-                                        <div class="icons">
-                                            <img src="../img/trash_Icon.svg" alt="Trash icon">
-                                            <img src="../img/edit_Icon.svg" alt="Edit icon">
-                                        </div>
-                                    </div>
-                                    <img class="itemWishlist" src="../img/wishlist_Icon.svg" alt="Wishlist icon">
-                                </div>
-                            </article>
-                        </div>
+                            </article> -->
+
+                        </article>
                     </div>
-                </nav>
+                </div>
+            </nav>
         </section>
 
         <!-- Section Log in & Create Account -->
@@ -382,7 +329,12 @@
 
     <!-- JS -->
 
-    <script src="main.js"></script>
+    <!-- <script src="../main.js"></script> -->
+
+    <script src="../cart.js"></script>
+    <script src="../store.js"></script>
+    <script src="../filter.js"></script>
+    <script src="../wishlist.js"></script>
 
 </body>
 </html>
