--- a/scss/_best_Sellers.scss
+++ b/scss/_best_Sellers.scss
@@ -12,7 +12,7 @@
         text-align: center;
         margin-bottom: 100px;
     }
-    .sectionCard{
+    .sectionCardBlock{
         .cardProducts{
             width:100%;
             height:auto;
