--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -13,259 +13,6 @@ html{
     .mainContainer{
         width: $screenPercentageWidth;
         height: $screenPercentageHeight;
-        #cart{
-            display: none;
-            &:checked ~ .sectionShop{
-                transform:translate(0%);
-            }
-        }
-        .sectionShop{
-            width:40vw;
-            height: 100vh;
-            position: fixed;
-            top:0;
-            right:0;
-            @extend .flexColumnBetween;
-            background-color: $whiteColor;
-            overflow: hidden;
-            box-shadow:$boxShadowMenu ;
-            z-index: 10;
-            padding-top: 30px;
-            transform: translate(105%);
-            transition: $transition;
-            .menuCart{
-                .cartShop{
-                    .closeCross{
-                        width:15px;
-                        cursor: pointer;
-                        position: absolute;
-                        top:20px;
-                        left:40px;
-                        transform: rotate(0deg);
-                        transition: $transition;
-                        &:hover{
-                            transform: rotate(90deg);
-                        }
-                    }
-                }
-                .menuCartlist{
-                    .choiceCartlist{
-                        width: 90%;
-                        @include display_flex_column_space_between_flex_start();
-                        margin: $neutralMargin;
-                        padding: 0px 20px;
-                        height: 380px;
-                        overflow: scroll;
-                        position: fixed;
-                        top:60px;
-                        left:20px;
-                        .cartlistWord{
-                            width: inherit;
-                            font-size: $MediumTitle;
-                            font-family: $fontJura;
-                            color:$primaryColor;
-                            font-weight: $bold;
-                            margin:0px ;
-                        }
-                        .cart{
-                            .category{
-                                @extend .flexRowBetween;
-                                padding: 20px 0px;
-                                border-bottom: 1px solid #e4e4e4;
-                                .titleCartlist{
-                                    font-size: $regularText;
-                                    font-family: $fontJura;
-                                    color:$primaryColor;
-                                    font-weight: $bold;
-                                    margin: 15px 0px;
-                                }
-                            }
-                            .cartlist{
-                                @extend .flexRowBetween;
-                                padding: 20px 0px;
-                                border-bottom: $borderBottom;
-                                .total{
-                                    font-size: $regularText;
-                                }
-                                .itemProduct{
-                                    width:12%;
-                                }
-                                .description{
-                                    display: flex;
-                                    flex-direction: column;
-                                    .price{
-                                        font-size: $smallText;
-                                        font-family: $fontJura;
-                                        color:$tertiaryColor;
-                                        font-weight: $bold;
-                                    }
-                                    .icons{
-                                        img{
-                                            width:20px;
-                                            cursor: pointer;
-                                        }
-                                    }
-                                }
-                                .itemNumber{
-                                    #quantity{
-                                        width:50px;
-                                        height:35px;
-                                        padding: 2px;
-                                        font-size: $smallText;
-                                        font-family: $fontJura;
-                                        color:$primaryColor;
-                                        font-weight: $bold;
-                                    }
-                                }
-                                .total{
-                                    font-size: $smallText;
-                                    font-family: $fontJura;
-                                    color:$primaryColor;
-                                    font-weight: $bold;
-                                }
-                            }
-                        }
-                    }
-                    .outcomeCard{
-                        width: 70%;
-                        display: flex;
-                        flex-direction: column;
-                        justify-content: space-between;
-                        position:absolute;
-                        bottom:0px;
-                        left:20px;
-                        .outcome{
-                            .shipping, .discount, .total{
-                                margin: 2px;
-                                width: inherit;
-                                font-size: $smallText;
-                                font-family: $fontJura;
-                                color:$tertiaryColor;
-                                font-weight: $bold;
-                                display: flex;
-                                justify-content: space-between;
-                                // background-color: #707070;
-                            }
-                            .total{
-                                color:$primaryColor;
-                                font-weight: $ExtraBold;
-                            }
-                        }
-                        .btnCheckout{
-                            width: 100%;
-                            padding: 10px 20px;
-                            @extend .flexColumnCenterCenter;
-                            margin:20px auto;
-                            font-size: $regularText;
-                            font-family: $fontJura;
-                            font-weight: $bold;
-                            color: $whiteColor;
-                            border: 1px solid transparent;
-                            background-color: $blackColor;
-                            transition: $transition;
-                            &:hover{
-                                color: $blackColor;
-                                background-color:$whiteColor;
-                                border:$btnMenu;
-                                font-weight:$bold;
-                            }
-                        }
-                    }
-                }
-            }
-        }
-        #wishlistSide{
-            display: none;
-            &:checked ~ .sectionWishlist{
-                transform:translate(0%);
-            }
-        }
-        .sectionWishlist{
-            width:25vw;
-            height: 100vh;
-            position: fixed;
-            top:0;
-            right:0;
-            z-index: 10px;
-            @extend .flexColumn;
-            align-items: flex-start;
-            background-color: $whiteColor;
-            overflow: hidden;
-            box-shadow: $boxShadowMenu;
-            z-index: 10;
-            padding-top: 60px;
-            transform: translate(105%);
-            transition: $transition;
-            .wishHeadLine{
-                .closeCross{
-                    width:15px;
-                    cursor: pointer;
-                    position: absolute;
-                    top:20px;
-                    left:35px;
-                    transform: rotate(0deg);
-                    transition: $transition;
-                    &:hover{
-                        transform: rotate(90deg);
-                    }
-                }
-            }
-            .menuWishlist{
-                .choiceWishlist{
-                    width: 80%;
-                    @include display_flex_column_space_between_flex_start();
-                    margin: $neutralMargin;
-                    .wishlistWord{
-                        width: inherit;
-                        font-size: $MediumTitle;
-                        font-family: $fontJura;
-                        color:$primaryColor;
-                        font-weight:$bold;
-                        margin:0px ;
-                    }
-                    .wish{
-                        .category{
-                            @include display_flex_row_space_between_flex_start();
-                            padding: 20px 0px;
-                            border-bottom: $borderBottom;
-                            .titleWishlist{
-                                font-size: $regularText;
-                                font-family: $fontJura;
-                                color:$primaryColor;
-                                font-weight: $bold;
-                                margin: 15px 0px;
-                            }
-                        }
-                        .wishlist{
-                            .blockProduct{
-                                @extend .flexRowBetween;
-                                padding: 20px 0px;
-                                border-bottom: $borderBottom;
-                                .itemProduct{
-                                    width:15%;
-                                }
-                                .description{
-                                    display: flex;
-                                    flex-direction: column;
-                                    margin-left:-40px;
-                                    .wishPrice{
-                                        font-size: $regularText;
-                                        font-family: $fontJura;
-                                        color:$primaryColor;
-                                        font-weight:$bold;
-                                    }
-                                    .icons{
-                                        img{
-                                            width:20px;
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        }
         .bannerShipping{
             width:100%;
             height: 25px;
@@ -363,4 +110,257 @@ html{
     max-width: 1300px;
     margin:$neutralMargin;
     padding: 0px 30px;
+}
+#cart{
+    display: none;
+    &:checked ~ .sectionShop{
+        transform:translate(0%);
+    }
+}
+.sectionShop{
+    width:40vw;
+    height:$screenHeight;
+    position: fixed;
+    top:0;
+    right:0;
+    @extend .flexColumnBetween;
+    background-color: $whiteColor;
+    overflow: hidden;
+    box-shadow:$boxShadowMenu ;
+    z-index: 10;
+    padding-top: 30px;
+    transform: translate(105%);
+    transition: $transition;
+    .menuCart{
+        .cartShop{
+            .closeCross{
+                width:15px;
+                cursor: pointer;
+                position: absolute;
+                top:20px;
+                left:40px;
+                transform: rotate(0deg);
+                transition: $transition;
+                &:hover{
+                    transform: rotate(90deg);
+                }
+            }
+        }
+        .menuCartlist{
+            .choiceCartlist{
+                width: 90%;
+                @include display_flex_column_space_between_flex_start();
+                margin: $neutralMargin;
+                padding: 0px 20px;
+                height: 380px;
+                overflow: scroll;
+                position: fixed;
+                top:60px;
+                left:20px;
+                .cartlistWord{
+                    width: inherit;
+                    font-size: $MediumTitle;
+                    font-family: $fontJura;
+                    color:$primaryColor;
+                    font-weight: $bold;
+                    margin:0px ;
+                }
+                .cart{
+                    .category{
+                        @extend .flexRowBetween;
+                        padding: 20px 0px;
+                        border-bottom: $borderBottom;
+                        .titleCartlist{
+                            font-size: $regularText;
+                            font-family: $fontJura;
+                            color:$primaryColor;
+                            font-weight: $bold;
+                            margin: 15px 0px;
+                        }
+                    }
+                    .cartList{
+                        @extend .flexRowBetween;
+                        padding: 20px 0px;
+                        border-bottom: $borderBottom;
+                        .total{
+                            font-size: $regularText;
+                        }
+                        .itemProduct{
+                            width:12%;
+                        }
+                        .description{
+                            display: flex;
+                            flex-direction: column;
+                            .price{
+                                font-size: $smallText;
+                                font-family: $fontJura;
+                                color:$tertiaryColor;
+                                font-weight: $bold;
+                            }
+                            .icons{
+                                img{
+                                    width:20px;
+                                    cursor: pointer;
+                                }
+                            }
+                        }
+                        .itemNumber{
+                            #quantity{
+                                width:50px;
+                                height:35px;
+                                padding: 2px;
+                                font-size: $smallText;
+                                font-family: $fontJura;
+                                color:$primaryColor;
+                                font-weight: $bold;
+                            }
+                        }
+                        .total{
+                            font-size: $smallText;
+                            font-family: $fontJura;
+                            color:$primaryColor;
+                            font-weight: $bold;
+                        }
+                    }
+                }
+            }
+            .outcomeCard{
+                width: 70%;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                position:absolute;
+                bottom:0px;
+                left:20px;
+                .outcome{
+                    .shipping, .discount, .total{
+                        margin: 2px;
+                        width: inherit;
+                        font-size: $smallText;
+                        font-family: $fontJura;
+                        color:$tertiaryColor;
+                        font-weight: $bold;
+                        display: flex;
+                        justify-content: space-between;
+                        // background-color: #707070;
+                    }
+                    .total{
+                        color:$primaryColor;
+                        font-weight: $ExtraBold;
+                    }
+                }
+                .btnCheckout{
+                    width: 100%;
+                    padding: 10px 20px;
+                    @extend .flexColumnCenterCenter;
+                    margin:20px auto;
+                    font-size: $regularText;
+                    font-family: $fontJura;
+                    font-weight: $bold;
+                    color: $whiteColor;
+                    border: 1px solid transparent;
+                    background-color: $blackColor;
+                    transition: $transition;
+                    &:hover{
+                        color: $blackColor;
+                        background-color:$whiteColor;
+                        border:$btnMenu;
+                        font-weight:$bold;
+                    }
+                }
+            }
+        }
+    }
+}
+#wishlistSide{
+    display: none;
+    &:checked ~ .sectionWishlist{
+        transform:translate(0%);
+    }
+}
+.sectionWishlist{
+    width:30vw;
+    height: $screenHeight;
+    position: fixed;
+    top:0;
+    right:0;
+    z-index: 10px;
+    @extend .flexColumn;
+    align-items: flex-start;
+    background-color: $whiteColor;
+    overflow: hidden;
+    box-shadow: $boxShadowMenu;
+    z-index: 10;
+    padding-top: 60px;
+    transform: translate(105%);
+    transition: $transition;
+    .wishHeadLine{
+        .closeCross{
+            width:15px;
+            cursor: pointer;
+            position: absolute;
+            top:20px;
+            left:35px;
+            transform: rotate(0deg);
+            transition: $transition;
+            &:hover{
+                transform: rotate(90deg);
+            }
+        }
+    }
+    .menuWishlist{
+        .choiceWishlist{
+            width: 80%;
+            @include display_flex_column_space_between_flex_start();
+            margin: $neutralMargin;
+            .wishlistWord{
+                width: inherit;
+                font-size: $MediumTitle;
+                font-family: $fontJura;
+                color:$primaryColor;
+                font-weight:$bold;
+                margin:0px ;
+            }
+            .wish{
+                .category{
+                    @include display_flex_row_space_between_flex_start();
+                    padding: 20px 0px;
+                    border-bottom: 0;
+                    .titleWishlist{
+                        font-size: $regularText;
+                        font-family: $fontJura;
+                        color:$primaryColor;
+                        font-weight: $bold;
+                        margin: 15px 0px;
+                    }
+                }
+                .wishlist{
+                    .blockProduct{
+                        @extend .flexRowBetween;
+                        padding: 20px 0px;
+                        border-bottom: $borderBottom;
+                        .itemProduct{
+                            width:15%;
+                        }
+                        .description{
+                            display: flex;
+                            flex-direction: column;
+                            margin-left:-40px;
+                            .wishPrice{
+                                font-size: $regularText;
+                                font-family: $fontJura;
+                                color:$primaryColor;
+                                font-weight:$bold;
+                            }
+                            .icons{
+                                img{
+                                    width:20px;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
