--- a/scss/_my_Cart.scss
+++ b/scss/_my_Cart.scss
@@ -69,7 +69,7 @@
                             margin: 15px 0px;
                         }
                     }
-                    .cartlist{
+                    .cartList{
                         @extend .flexRowBetween;
                         padding: 20px 0px;
                         border-bottom: $borderBottom;
