--- a/scss/_store.scss
+++ b/scss/_store.scss
@@ -138,18 +138,20 @@
 
     .sectionStore{
         .sectionCard{
+            display: grid;
+            grid-template-columns: repeat(5, 1fr);
+            grid-template-rows: repeat(1, 1fr);
+            gap: 30px;
             .cardProducts{
                 width:100%;
                 height:auto;
-                cursor: pointer;
-                overflow: hidden;
                 transition: all 0.3s ease;
                 &:hover{
                     box-shadow: 0 0 4px 2px #707070;
                 }
                 .article{
                     width:100%;
-                    height: inherit;
+                    height: auto;
                     overflow: hidden;
                     &:hover > .outFit{
                         transform:scale(110%);
@@ -159,26 +161,27 @@
                     .info{
                         width:101%;
                         @extend  .flexColumn;
-                        color: #D9D9D9;
+                        color: $tertiaryColor;
                         font-weight: 500;
                         font-family: $fontJura;
-                        margin-top: 20px;
                         padding:20px;
-                        background-color:#ffffff;
-                        // background-color: #131313;
-                        transform: translateY(-110%);
+                        background-color:$whiteColor;
+                        gap:20px;
+                        transform: translateY(0%);
                         transition: transform 0.3s ease;
                         .heartIcon{
                             align-self: self-end;
+                            cursor: pointer;
                         }
                         .linkStore{
                             width: 100%;
                             text-align: center;
-                            padding: 5px;
-                            color: #D9D9D9;
+                            padding: 10px;
+                            color: $whiteColor;
                             font-weight: 600;
                             font-family: $fontJura;
                             background-color: #BC2327;
+                            border: 1px solid #BC2327;
                             text-decoration: none;
                             transition: all 0.3s ease;
                             &:hover{
@@ -187,6 +190,8 @@
                                 // background-color: #D9D9D9;
                                 background-color: #000000;
                                 // box-shadow: 0 0 4px 2px #BC2327;
+                                border: 1px solid #000000;
+                                cursor:pointer;
                             }
                         }
                     }
