--- a/views/show_Room.html
+++ b/views/show_Room.html
@@ -101,145 +101,6 @@
             </p>
         </section>
 
-        <!-- Cart -->
-
-        <input id="cart" type="checkbox">
-        <section class="sectionShop">
-            <div class="menuCart">
-                <label for="cart" class="cartShop">
-                    <img class="closeCross" src="../img/close_Cross.svg" alt="Close cross icon">
-                </label>
-                <nav class="menuCartlist">
-                    <div class="choiceCartlist">
-                        <h3 class="cartlistWord">My cart</h3>
-                        <div class="cart">
-                            <article class="category">
-                                <h3 class="titleCartlist">Item</h3>
-                                <h3 class="titleCartlist">Pricing</h3>
-                                <h3 class="titleCartlist">Quantity</h3>
-                                <h3 class="titleCartlist">Total</h3>
-                            </article>
-                            <article class="cartlist">
-                                    <img class="itemProduct" src="../img/pic24.webp" alt="Product pic">
-                                    <div class="description">
-                                        <p class="price">$499</p>
-                                        <div class="icons">
-                                            <img src="../img/trash_Icon.svg" alt="Trash icon">
-                                            <img src="../img/edit_Icon.svg" alt="Edit icon">
-                                        </div>
-                                    </div>
-                                    <div class="itemNumber">
-                                        <label for="quantity"></label>
-                                        <input type="number" id="quantity" name="quantity" min="1" max="5" value="0" >
-                                    </div>
-                                    <p class="total">$499</p>
-                            </article>
-                            <article class="cartlist">
-                                    <img class="itemProduct" src="../img/pic25.webp" alt="Product pic">
-                                    <div class="description">
-                                        <p class="price">$499</p>
-                                        <div class="icons">
-                                            <img src="../img/trash_Icon.svg" alt="Trash icon">
-                                            <img src="../img/edit_Icon.svg" alt="Edit icon">
-                                        </div>
-                                    </div>
-                                    <div class="itemNumber">
-                                        <label for="quantity"></label>
-                                        <input type="number" id="quantity" name="quantity" min="1" max="5" value="0">
-                                    </div>
-                                    <p class="total">$499</p>
-                            </article>
-                            <article class="cartlist">
-                                    <img class="itemProduct" src="../img/pic29.webp" alt="Product pic">
-                                    <div class="description">
-                                        <p class="price">$499</p>
-                                        <div class="icons">
-                                            <img src="../img/trash_Icon.svg" alt="Trash icon">
-                                            <img src="../img/edit_Icon.svg" alt="Edit icon">
-                                        </div>
-                                    </div>
-                                    <div class="itemNumber">
-                                        <label for="quantity"></label>
-                                        <input type="number" id="quantity" name="quantity" min="1" max="5" value="0">
-                                    </div>
-                                    <p class="total">$499</p>
-                            </article>
-                            <article class="cartlist">
-                                <img class="itemProduct" src="../img/pic22.webp" alt="Product pic">
-                                <div class="description">
-                                    <p class="price">$499</p>
-                                    <div class="icons">
-                                        <img src="../img/trash_Icon.svg" alt="Trash icon">
-                                        <img src="../img/edit_Icon.svg" alt="Edit icon">
-                                    </div>
-                                </div>
-                                <div class="itemNumber">
-                                    <label for="quantity"></label>
-                                    <input type="number" id="quantity" name="quantity" min="1" max="5" value="0">
-                                </div>
-                                <p class="total">$499</p>
-                        </article>
-                        </div>
-                    </div>
-                    <div class="outcomeCard">
-                        <article class="outcome">
-                            <p class="shipping">Shipping<span>$00</span></p>
-                            <p class="discount">Discount 25%<span>$374</span></p>
-                            <p class="total">Total<span>$1122</span></p>
-                        </article>
-                        <button type="button" class="btnCheckout">Secure checkout</button>
-                    </div>
-                </nav>
-            </div>
-        </section>
-
-        <!-- WhishList -->
-
-        <input type="checkbox" id="wishlistSide">
-        <section class="sectionWishlist">
-            <label for="wishlistSide" class="wishHeadLine">
-                <img class="closeCross" src="../img/close_Cross.svg" alt="Close cross icon">
-            </label>
-                <nav class="menuWishlist">
-                    <div class="choiceWishlist">
-                        <h3 class="wishlistWord">WishList</h3>
-                        <div class="wish">
-                            <article class="category">
-                                <h3 class="titleWishlist">Item</h3>
-                                <h3 class="titleWishlist">Pricing</h3>
-                                <h3 class="titleWishlist">Wish</h3>
-                            </article>
-                            <article class="wishlist">
-                                <div class="blockProduct">
-                                    <img class="itemProduct" src="../img/pic24.webp" alt="Product pic">
-                                    <div class="description">
-                                        <p class="wishPrice">$499</p>
-                                        <div class="icons">
-                                            <img src="../img/trash_Icon.svg" alt="Trash icon">
-                                            <img src="../img/edit_Icon.svg" alt="Edit icon">
-                                        </div>
-                                    </div>
-                                    <img class="itemWishlist" src="../img/wishlist_Icon.svg" alt="Wishlist icon">
-                                </div>
-                            </article>
-                            <article class="wishlist">
-                                <div class="blockProduct">
-                                    <img class="itemProduct" src="../img/pic25.webp" alt="Product pic">
-                                    <div class="description">
-                                        <p class="wishPrice">$499</p>
-                                        <div class="icons">
-                                            <img src="../img/trash_Icon.svg" alt="Trash icon">
-                                            <img src="../img/edit_Icon.svg" alt="Edit icon">
-                                        </div>
-                                    </div>
-                                    <img class="itemWishlist" src="../img/wishlist_Icon.svg" alt="Wishlist icon">
-                                </div>
-                            </article>
-                        </div>
-                    </div>
-                </nav>
-        </section>
-
         <!-- Tag GetOff -->
 
         <section class="tagGetOff">
@@ -308,6 +169,92 @@
                     <li><a href="https://co.pinterest.com/" target="_blank" class="item"><img src="../img/pinterest.svg" alt="" class="itemSocial"></a></li>
                 </ul>
             </article>
+        </section>
+
+        <!-- ShoppingCart -->
+
+        <input id="cart" type="checkbox">
+        <section class="sectionShop">
+            <div class="menuCart">
+                <label for="cart" class="cartShop">
+                    <img class="closeCross" src="../img/close_Cross.svg" alt="Close cross icon">
+                </label>
+                <nav class="menuCartlist">
+                    <div class="choiceCartlist">
+                        <h3 class="cartlistWord">My cart</h3>
+                        <div class="cart">
+                            <article class="category">
+                                <h3 class="titleCartlist">Item</h3>
+                                <h3 class="titleCartlist">Pricing</h3>
+                                <h3 class="titleCartlist">Quantity</h3>
+                                <h3 class="titleCartlist">Total</h3>
+                            </article>
+                            <article class="containerArticles">
+                                <!-- <article class="cartlist">
+                                        <img class="itemProduct" src="../img/pic24.webp" alt="Product pic">
+                                        <div class="description">
+                                            <p class="price">$499</p>
+                                            <div class="icons">
+                                                <img src="../img/trash_Icon.svg" alt="Trash icon">
+                                                <img src="../img/edit_Icon.svg" alt="Edit icon">
+                                            </div>
+                                        </div>
+                                        <div class="itemNumber">
+                                            <label for="quantity"></label>
+                                            <input type="number" id="quantity" name="quantity" min="1" max="5" value="0" >
+                                        </div>
+                                        <p class="total">$499</p>
+                                </article> -->
+                            </article>
+                        </div>
+                    </div>
+                    <div class="outcomeCard">
+                        <!-- <article class="outcome">
+                            <p class="shipping">Shipping<span>$00</span></p>
+                            <p class="discount">Discount 25%<span>$374</span></p>
+                            <p class="total">Total<span>$1122</span></p>
+                        </article> -->
+                        <button class="btnCheckout">Secure checkout</button>
+                    </div>
+                </nav>
+            </div>
+        </section>
+
+        <!-- WhishList -->
+
+        <input type="checkbox" id="wishlistSide">
+        <section class="sectionWishlist">
+            <label for="wishlistSide" class="wishHeadLine">
+                <img class="closeCross" src="../img/close_Cross.svg" alt="Close cross icon">
+            </label>
+            <nav class="menuWishlist">
+                <div class="choiceWishlist">
+                    <h3 class="wishlistWord">WishList</h3>
+                    <div class="wish">
+                        <article class="category">
+                            <h3 class="titleWishlist">Item</h3>
+                            <h3 class="titleWishlist">Pricing</h3>
+                            <h3 class="titleWishlist">Wish</h3>
+                        </article>
+                        <article class="containerWishlist">
+                            <!-- <article class="wishlist">
+                                <div class="blockProduct">
+                                    <img class="itemProduct" src="img/pic24.webp" alt="Product pic">
+                                    <div class="description">
+                                        <p class="wishPrice">$499</p>
+                                        <div class="icons">
+                                            <img src="img/trash_Icon.svg" alt="Trash icon">
+                                            <img src="img/edit_Icon.svg" alt="Edit icon">
+                                        </div>
+                                    </div>
+                                    <img class="itemWishlist" src="img/wishlist_Icon.svg" alt="Wishlist icon">
+                                </div>
+                            </article> -->
+
+                        </article>
+                    </div>
+                </div>
+            </nav>
         </section>
 
         <!-- ShowRoom -->
@@ -463,7 +410,7 @@
 
         <section class="newArrivals" id="containerNewArrivals">
             <h3 class="title">"If you're interested, you can also check out our new outfits."</h3>
-            <div class="sectionCard d-flex flex-direction-row">
+            <div class="sectionCardContainer d-flex flex-direction-row">
                 <article class="cardProducts m-0">
                     <div class="article1">
                         <label for="new1" class="fadeAway">
@@ -530,7 +477,7 @@
                     </div>
                 </article>
             </div>
-            <div class="sectionCard d-flex flex-direction-row">
+            <div class="sectionCardContainer d-flex flex-direction-row">
                 <article class="cardProducts m-0">
                     <div class="article6">
                         <label for="new6" class="fadeAway">
@@ -642,7 +589,13 @@
 
     <!-- JS -->
 
-    <script src="../main.js"></script>
+    <!-- <script src="../main.js"></script> -->
+
+    <script src="../cart.js"></script>
+    <script src="../store.js"></script>
+    <script src="../filter.js"></script>
+    <script src="../wishlist.js"></script>
+
 
 </body>
 </html>
