--- a/scss/_store.scss
+++ b/scss/_store.scss
@@ -153,10 +153,22 @@
                     width:100%;
                     height: auto;
                     overflow: hidden;
+                    position: relative;
                     &:hover > .outFit{
                         transform:scale(110%);
                         filter: grayscale(100%);
                         box-shadow: 0 0 4px 2px #707070;
+                    }
+                    .soldOutLabel{
+                        position: absolute;
+                        top:0px;
+                        right:0px;
+                        padding:5px 10px;
+                        background-color: $blackColor;
+                        color:$whiteColor;
+                        font-weight: 500;
+                        font-family: $fontJura;
+                        z-index:1;
                     }
                     .info{
                         width:101%;
@@ -180,17 +192,17 @@
                             color: $whiteColor;
                             font-weight: 600;
                             font-family: $fontJura;
-                            background-color: #BC2327;
-                            border: 1px solid #BC2327;
+                            background-color: $primaryColor;
+                            border: 1px solid $primaryColor;
                             text-decoration: none;
                             transition: all 0.3s ease;
                             &:hover{
                                 // color: #BC2327;
-                                color: #ffffff;
+                                color: $whiteColor;
                                 // background-color: #D9D9D9;
-                                background-color: #000000;
+                                background-color: $blackColor;
                                 // box-shadow: 0 0 4px 2px #BC2327;
-                                border: 1px solid #000000;
+                                border: 1px solid $blackColor;
                                 cursor:pointer;
                             }
                         }
