--- a/views/show_Room.html
+++ b/views/show_Room.html
@@ -416,9 +416,9 @@
                             <img src="../img/skull.svg" alt="Skull logo" class="skull">
                         </label>
                         <input type="checkbox" id="new1" class="new">
-                        <a href="../views/store.html" class="smallCard">
+                        <a href="store.html" class="smallCard">
                             <img src="../img/pic38.webp" alt="Outfit Image" class="outFit">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">aggressive......................$599</p>
                         </a>
                         <img src="../img/pic38.webp" alt="Outfit Image" id="outFit" class="outFit">
                     </div>
@@ -429,9 +429,9 @@
                             <img src="../img/skull.svg" alt="Skull logo" class="skull">
                         </label>
                         <input type="checkbox" id="new2" class="new">
-                        <a href="../views/store.html" class="smallCard">
+                        <a href="store.html" class="smallCard">
                             <img src="../img/pic28.webp" alt="Outfit Image" class="outFit">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Aggressive......................$499</p>
                         </a>
                         <img src="../img/pic28.webp" alt="Outfit Image"  id="outFit" class="outFit">
                     </div>
@@ -442,9 +442,9 @@
                             <img src="../img/skull.svg" alt="Skull logo" class="skull">
                         </label>
                         <input type="checkbox" id="new3" class="new">
-                        <a href="../views/store.html"  class="smallCard">
-                            <img src="../img/pic29.webp" alt="Outfit Image" class="outFit">
-                            <p class="price">Outfit.................................$499</p>
+                        <a href="store.html"  class="smallCard">
+                            <img src="img/pic29.webp" alt="Outfit Image" class="outFit">
+                            <p class="price">Street.............................$599</p>
                         </a>
                         <img src="../img/pic29.webp" alt="Outfit Image" id="outFit" class="outFit">
                     </div>
@@ -455,9 +455,9 @@
                             <img src="../img/skull.svg" alt="Skull logo" class="skull">
                         </label>
                         <input type="checkbox" id="new4" class="new">
-                        <a href="../views/store.html" class="smallCard">
+                        <a href="store.html" class="smallCard">
                             <img src="../img/pic33.webp" alt="Outfit Image" class="outFit">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Aggressive......................$599</p>
                         </a>
                         <img src="../img/pic33.webp" alt="Outfit Image" id="outFit" class="outFit">
                     </div>
@@ -468,9 +468,9 @@
                             <img src="../img/skull.svg" alt="Skull logo" class="skull">
                         </label>
                         <input type="checkbox" id="new5" class="new">
-                        <a href="../views/store.html" class="smallCard">
+                        <a href="store.html" class="smallCard">
                             <img src="../img/pic30.webp" alt="Outfit Image" class="outFit">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Xtreme...........................$999</p>
                         </a>
                         <img src="../img/pic30.webp" alt="Outfit Image" id="outFit" class="outFit">
                     </div>
@@ -483,9 +483,9 @@
                             <img src="../img/skull.svg" alt="Skull logo" class="skull">
                         </label>
                         <input type="checkbox" id="new6" class="new">
-                        <a href="../views/store.html" class="smallCard">
+                        <a href="store.html" class="smallCard">
                             <img src="../img/pic20.webp" alt="Outfit Image" class="outFit">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Street...........................$499</p>
                         </a>
                         <img src="../img/pic20.webp" alt="Outfit Image" id="outFit" class="outFit">
                     </div>
@@ -496,9 +496,9 @@
                             <img src="../img/skull.svg" alt="Skull logo" class="skull">
                         </label>
                         <input type="checkbox" id="new7" class="new">
-                        <a href="../views/store.html" class="smallCard">
+                        <a href="store.html" class="smallCard">
                             <img src="../img/pic17.webp" alt="Outfit Image" class="outFit">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Xtreme............................$499</p>
                         </a>
                         <img src="../img/pic17.webp" alt="Outfit Image" id="outFit" class="outFit">
                     </div>
@@ -509,9 +509,9 @@
                             <img src="../img/skull.svg" alt="Skull logo" class="skull">
                         </label>
                         <input type="checkbox" id="new8" class="new">
-                        <a href="../views/store.html" class="smallCard">
+                        <a href="store.html" class="smallCard">
                             <img src="../img/pic36.webp" alt="Outfit Image" class="outFit">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Aggressive.....................$999</p>
                         </a>
                         <img src="../img/pic36.webp" alt="Outfit Image" id="outFit" class="outFit">
                     </div>
@@ -522,9 +522,9 @@
                             <img src="../img/skull.svg" alt="Skull logo" class="skull">
                         </label>
                         <input type="checkbox" id="new9" class="new">
-                        <a href="../views/store.html" class="smallCard">
+                        <a href="store.html" class="smallCard">
                             <img src="../img/pic35.webp" alt="Outfit Image" class="outFit">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Xtreme............................$599</p>
                         </a>
                         <img src="../img/pic35.webp" alt="Outfit Image" id="outFit" class="outFit">
                     </div>
@@ -535,15 +535,16 @@
                             <img src="../img/skull.svg" alt="Skull logo" class="skull">
                         </label>
                         <input type="checkbox" id="new10" class="new">
-                        <a href="../views/store.html" class="smallCard">
+                        <a href="store.html" class="smallCard">
                             <img src="../img/pic34.webp" alt="Outfit Image" class="outFit">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Street.............................$999</p>
                         </a>
                         <img src="../img/pic34.webp" alt="Outfit Image" id="outFit" class="outFit">
                     </div>
                 </article>
             </div>
         </section>
+
 
     </main>
 
